flux/manifests/local-staging/istio/argo-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: istio-system
spec:
  hosts:
    - "argocd.management.local"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "argocd.management.local"
            port:
              number: 8081
