flux/manifests/local-staging/istio/destination-harbor.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: harbor-destination
  namespace: istio-system
spec:
  host: harbor.management.local
  trafficPolicy:
    tls:
      mode: SIMPLE  # Apply basic TLS for outbound traffic (adjust based on your needs)
