flux/manifests/local-staging/istio/service-entry-harbor.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: harbor-service-entry
  namespace: istio-system
spec:
  hosts:
    - "harbor.management.local"
  location: MESH_EXTERNAL
  resolution: STATIC
  addresses:
  - 172.17.0.51
  ports:
    - name: http
      number: 8081  # Matches management ingress HTTP port
      protocol: HTTP
    - name: https
      number: 44301  # Matches management ingress HTTPS port
      protocol: HTTPS
